Add maven dependencies and plugins